--- a/src/konnekt/component/FeedPanel.form
+++ b/src/konnekt/component/FeedPanel.form
@@ -109,7 +109,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Verdana" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="What on your mind?"/>
+            <Property name="text" type="java.lang.String" value="What&apos;s on your mind?"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="postInputActionPerformed"/>
